--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^17.0.2",
     "react-multi-select-component": "^4.2.5",
     "react-redux": "^8.0.1",
