--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.3",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
@@ -48,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "jest-watch-typeahead": "^0.6.5"
   }
 }
