--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name : Node Setup, Test and Build
-        uses: actions/actions/setup-node@v3.1.1
+        uses: actions/setup-node@v3.1.1
         with:
          node-version: '14.16'
       - run: npm test -- --watchAll=false
