--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/setup-node@v3.1.1
         with:
          node-version: '14.16'
+      - run: npm ci
       - run: npm test -- --watchAll=false
       - run: npm build
 
