--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^17.0.2",
+    "react-dotenv": "^0.1.3",
     "react-multi-select-component": "^4.2.5",
     "react-redux": "^8.0.1",
     "react-router": "^6.3.0",
@@ -26,9 +27,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "REACT_APP_BACKEND_URL"
+    ]
   },
   "eslintConfig": {
     "extends": [
