--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
          node-version: '14.16'
       - run: npm ci
       - run: npm test -- --watchAll=false
+      - run: node createEnv.js 
       - run: CI=false npm run build
 
       - name: Docker Login
