--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "mui-datatables": "^4.2.2",
     "react": "^17.0.2",
     "react-countdown-circle-timer": "^3.0.9",
     "react-dom": "^17.0.2",
